--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,17 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>Hi, I'm Niyigena Therese!I'm a junior web developer based in Kigali, 
+  Rwanda. Passionate about creating elegant and user-friendly websites, 
+  I thrive on turning ideas into functional code.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+<p> I specialize in front-end development using HTML, CSS, and JavaScript.
+   I love crafting responsive, accessible, and visually appealing interfaces.</p>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+<p>As a lifelong learner, I'm always exploring new technologies and frameworks.
+   Currently, I'm diving into React and improving my back-end skills.</p>
+
+<p>I believe that small details make a big difference. 
+  Whether it's optimizing performance or fine-tuning a design,
+  I'm meticulous in my work.</p>
+
+<p>I enjoy collaborating with designers, UX experts, and fellow developers. 
+  Teamwork fuels creativity and leads to outstanding results.</p>
