--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
+<p>Tel: +250789503890</p>
+<p>Email: therese14@gmail.com</p>
+<p>Address</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Kigali<br />
+  Nyarugenge/Rugenge<br />
+  Rwanda <br />
 </p>
